2001-07-21  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-restore-windows): split so that the status
	window is just big enough to show contents.

	* nethack-menu.el (nethack-menu-create-item): fix bug that
	prevented non-menu text from showing up.

2001-07-19  shawn  <sabetts@diggin.lamenet.tmp>

	* nethack-apix.el (nethack-api-choose-attribute): new arg ABORT.
	(nethack-api-choose-attribute): trap the quit signal and return
	ABORT in this case.
	(nethack-api-choose-role): properly return the associated number
	when there is only 1 choice.
	(nethack-api-choose-race): likewise
	(nethack-api-choose-gender): likewise
	(nethack-api-choose-alignment): likewise

2001-07-18  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-menu.el (nethack-menu-keymap): rename from
	nethack-menu-mode-map.
	(nethack-menu-create-item): pass in HOW argument
	(nethack-menu-how): remove variable
	(nethack-menu-create-item): use accelerators.

2001-07-16  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el: tweak faces for light background.

	* nethack-api.el (nethack-api-putstr): save-selected-window only
	once.
	(nethack-api-delay-output): return a dummy value to the process.

2001-07-14  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el: Remove default key from docstring.

	* nethack-api.el (nethack-api-putstr): Force maximum output on
	status windows.

2001-07-13  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el (defun-nethack-command): New macro.  Redefine all
	nethack commands with this macro.  All nethack commands now take
	optional count argument.

2001-07-10  Ryan Yeske  <rcyeske@van.gobasis.com>

	* nethack-api.el (nethack-api-ask-direction): remove setq

2001-07-09  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-process-filter): rewrite to insert string
	into process buffer and read and evaluate forms directly out of
	the buffer
	(nethack-process-output): remove
	(nethack-process-command-list): remove
	(nethack-parse-command): remove